:recycle: :speech_balloon: fixing dead links, broken thumbnails and tweaking text

--- a/apps/personal-portfolio/case-studies/flurrish.mdx
+++ b/apps/personal-portfolio/case-studies/flurrish.mdx
@@ -1,7 +1,7 @@
 ---
 title: Flurrish Case Study
 uid: flurrish
-thumbnail: thumb-1.jpeg
+thumbnail: /assets/case-studies/flurrish-logo.svg
 category: Web Development
 created: 1692842369687
 ---
@@ -17,16 +17,14 @@ created: 1692842369687
         <h3>Flurrish</h3>
         <p>
           <b>
-            Flurrish is a student engagement social media app for students on
-            campus. Flurrish enables students to take part in authentic and
-            personalized experiences based on their core interests. You can
-            browse activities and then select your interests; the app will align
-            your feed according to your personality. Flurrish is a safe and
-            secure platform for students willing to go on adventures and seeking
-            to create new and exciting memories. One of their main areas of
-            expertise is expanding your circle through networking. Flurrish
-            allows students to network with other students, faculty and even
-            employers. They dominate in creating group spaces for any occasion.
+            Flurrish is a social media app made for students on campus. Flurrish
+            enables students to take part in authentic and personalized
+            experiences based on their core interests. Students can browse
+            activities, select their interests and then the algorithm will align
+            their feed according to their interests. Flurrish focuses on
+            expanding the student's network through categored activities and
+            events they can partake in. Flurrish enables students to network
+            with other students, faculty and employers.
           </b>
         </p>
       </div>
@@ -93,16 +91,14 @@ created: 1692842369687
           Contentful and Amplify. Gatsby was leveraged to easily integrate with
           Contentful for sourcing data on build time and rebuilding using
           Amplify on Contentful webhooks. Contentful enabled easier content
-          management from the marketing team saving hours of iteration for any
-          content changes. Having a branded website that showcases the services
-          and products Flurrish offers helped sell Flurrish into respectable
-          schools around Canada.
+          management for the marketing team, reducing the amount of content
+          revisions. Having a branded website that displays the products
+          Flurrish offers helped sell Flurrish into respectable collages and
+          universities around Canada.
         </p>
         <p>
-          Worked on building a React Native app for facilitating student
-          engagement by utilizing Expo, React Native and AWS Amplify. Amplify
-          aided in quickly prototyping a GraphQL backend with DynamoDB as a
-          persistant data store.
+          Assisted on building a React Native app for facilitating student
+          engagement by using Expo, React Native and AWS Amplify.
         </p>
       </div>
     </div>
