--- a/apps/personal-portfolio/case-studies/hopin-technologies.mdx
+++ b/apps/personal-portfolio/case-studies/hopin-technologies.mdx
@@ -1,7 +1,7 @@
 ---
 title: Hopin Technologies Case Study
 uid: hopin-technologies
-thumbnail: thumb-1.jpeg
+thumbnail: /assets/case-studies/hopin-logo.svg
 category: Web Development
 created: 1692842369687
 ---
@@ -27,7 +27,7 @@ created: 1692842369687
             been featured on the Brampton Board of Trade, Founders Beta - 20
             Tech Companies to Watch for in 2021 and many more publications.
             They’re currently in partnership with Durham Region, JLL, Markham,
-            Vaughan and are currently expanding regionally.
+            Vaughan and expanding regionally.
           </b>
         </p>
       </div>
@@ -82,21 +82,20 @@ created: 1692842369687
         <h3>Contribution</h3>
         <p>
           Developed a client facing mobile application using React Native to
-          offer transportation logistics to company employees for the last
-          traveled mile when getting to work. Reduced hundreds of man hours in
-          collecting and recording routes manually through google forms. Built
-          with Typescript and Expo for easier developer experience and code
-          maintenance.
+          offer transportation logistics to company employees. Reduced hundreds
+          of labour-hours in collecting and recording routes manually through
+          google forms. Built with Typescript and Expo for easier developer
+          experience and code maintenance.
         </p>
         <p>
-          Used GCP's Firebase and Samsara ecosystems to rapidly develop and
+          Employed GCP's Firebase and Samsara ecosystems to rapidly develop and
           prototype a functioning backend for performing and storing
-          transportation monitoring operations. Moving from a manual approach to
-          a automated process to enable ease of use and extensibility.
+          transportation related operations. Moving from a manual approach to a
+          automated process to enable ease of use and extensibility.
         </p>
         <p>
           Developed a company website to advertise the application and their
-          offerings, with a modern stack of React and GatsbyJS. A more appealing
+          offerings, with a modern stack of React and Gatsby. A more appealing
           landing page will aid in conveying their business message more
           effectively to potential clients.
         </p>
