--- a/apps/personal-portfolio/case-studies/mullenlowe.mdx
+++ b/apps/personal-portfolio/case-studies/mullenlowe.mdx
@@ -1,7 +1,7 @@
 ---
 title: MullenLowe Case Study
 uid: mullenlowe
-thumbnail: thumb-1.jpeg
+thumbnail: /assets/case-studies/mullenlowe-logo.png
 category: Web Development
 created: 1692842369687
 ---
