--- a/apps/personal-portfolio/case-studies/natura-market.mdx
+++ b/apps/personal-portfolio/case-studies/natura-market.mdx
@@ -1,7 +1,7 @@
 ---
 title: Natura Market Case Study
 uid: natura-market
-thumbnail: thumb-1.jpeg
+thumbnail: /assets/case-studies/natura-market-logo.avif
 category: Web Development
 created: 1692842369687
 ---
@@ -17,14 +17,16 @@ created: 1692842369687
         <h3>Natura Market</h3>
         <p>
           <b>
-            Natura Market is a large wholesaler of perishables. Customers can
-            browse inventory by categories and select snacks based on their
-            specific diet and brand. Natura is completely transparent about all
-            of their products and ingredients. Customizing a meal plan for your
-            specific lifestyle is made easy as everything is already
-            categorized. Every single meal plan is available to choose from.
-            They have meal plans all the way from Ketogenic to Autoimmune
-            Protocol. Natura Market has over 100 brands of every type of snack.
+            Natura Market is a Canadian-based eCommerce business specializing in
+            the wholesale distribution of perishable goods. With a focus on
+            quality and sustainability, the company offers an extensive range of
+            organic, gluten-free, and non-GMO products sourced from reputable
+            suppliers. Utilizing a state-of-the-art inventory system and robust
+            cold-chain logistics, Natura Market ensures timely delivery and
+            optimal freshness of products. Catering to both individual consumers
+            and businesses, the company has established itself as a trusted name
+            in the industry for those seeking health-conscious options at
+            wholesale prices.
           </b>
         </p>
       </div>
@@ -84,10 +86,10 @@ created: 1692842369687
       <div class="right-details">
         <h3>Contribution</h3>
         <p>
-          Automated the deployment processes from manual deploys. Migrated from
-          manual versioning to a VCS for transparency and Github actions
-          automation while reducing AWS operating costs when in high-traffic
-          peak hours.
+          Automated the manual deployment processes. Migrated from manual source
+          code versioning to a VCS for transparency and accountability. Used
+          Github actions for deployment automation and reduced AWS operating
+          costs when in peak high-traffic hours.
         </p>
         <p>
           Onboarded multiple vendors like Klaviyo (marketing automation SaaS),
@@ -96,11 +98,11 @@ created: 1692842369687
         </p>
         <p>
           Refactored frontend files to deliver a better client experience when
-          browsing the website. Reduced the minified CSS and JS files by 40% by
-          removing bloatware.
+          browsing the website. Reduced the production codebase by removing
+          bloatware.
         </p>
         <p>
-          Aided on migrating from Magento's default query engine to Algolia for
+          Assisted migration from Magento's default query engine to Algolia for
           better querying capabilities.
         </p>
       </div>
