--- a/apps/personal-portfolio/posts/free-dev-website-template.mdx
+++ b/apps/personal-portfolio/posts/free-dev-website-template.mdx
@@ -1,7 +1,7 @@
 ---
 title: Free portfolio template for developers ✨
 uid: free-dev-website-template
-thumbnail: thumb-1.jpeg
+thumbnail: /assets/thumbnails/thumb-1.jpeg
 category: Web Development
 tag: Next.js
 description: A beautiful, minimal and user-friendly portfolio template for Developers which is completely free and open for consumption and contribution.
