--- a/apps/personal-portfolio/posts/examples.mdx
+++ b/apps/personal-portfolio/posts/examples.mdx
@@ -1,7 +1,7 @@
 ---
 title: Examples Post
 uid: example
-thumbnail: thumb-1.jpeg
+thumbnail: /assets/thumbnails/thumb-1.jpeg
 category: Web Development
 tag: Python
 description: This frontmatter description will appear below the title
