:recycle: removing example blog post, and fixing external links

--- a/apps/personal-portfolio/posts/free-dev-website-template.mdx
+++ b/apps/personal-portfolio/posts/free-dev-website-template.mdx
@@ -1,7 +1,7 @@
 ---
-title: Free portfolio template for developers ✨
+title: Portfolio template for developers ✨
 uid: free-dev-website-template
-thumbnail: /assets/thumbnails/thumb-1.jpeg
+thumbnail: /assets/thumbnails/website.png
 category: Web Development
 tag: Next.js
 description: A beautiful, minimal and user-friendly portfolio template for Developers which is completely free and open for consumption and contribution.
@@ -27,7 +27,3 @@ Give it a star 🌟 on Github if you find it useful.
 - Animated for page-transitions and browsing.
 - Optimized for web crawlers.
 - Loads fast ⚡.
-
-## Lighthouse Report
-
-[![lighthouse report with 100 result](https://res.cloudinary.com/practicaldev/image/fetch/s--RWzT4ZA8--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_800/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/4q0s69vzmyh5vxxo4erm.png)](https://res.cloudinary.com/practicaldev/image/fetch/s--RWzT4ZA8--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_800/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/4q0s69vzmyh5vxxo4erm.png)
