:bento: changing asset for hopin logo

--- a/apps/personal-portfolio/case-studies/hopin-technologies.mdx
+++ b/apps/personal-portfolio/case-studies/hopin-technologies.mdx
@@ -1,7 +1,7 @@
 ---
 title: Hopin Technologies Case Study
 uid: hopin-technologies
-thumbnail: /assets/case-studies/hopin-logo.svg
+thumbnail: /assets/case-studies/hopin-logo.jpeg
 category: Web Development
 created: 1692842369687
 ---
