:sparkles: more case studies

--- a/apps/personal-portfolio/case-studies/flurrish.mdx
+++ b/apps/personal-portfolio/case-studies/flurrish.mdx
@@ -1,7 +1,7 @@
 ---
 title: Flurrish Case Study
 uid: flurrish
-thumbnail: /assets/case-studies/flurrish-logo.svg
+thumbnail: /assets/case-studies/flurrish-logo.png
 category: Web Development
 created: 1692842369687
 ---
