:lipstick: :speech_balloon: fixing offerings asset and text for case studies

--- a/apps/personal-portfolio/case-studies/cleanlist.mdx
+++ b/apps/personal-portfolio/case-studies/cleanlist.mdx
@@ -78,19 +78,19 @@ created: 1692842369687
       <div class="right-details">
         <h3>Contribution</h3>
         <p>
-          Developed a landing website using Next.js and Material-UI, enhancing
+          Developed a marketing website using Next.js and Material-UI, enhancing
           the site's performance and user interface.
+        </p>
+        <p>
+          Designed and built a Chrome extension for LinkedIn to extract contacts
+          and perform data cleaning based on criterias like occupation level,
+          company, and job title, providing a targeted approach for data
+          collection.
         </p>
         <p>
           Engineered a portal to oversee and manage contacts that were extracted
           and cleaned via the Linkedin extractor Chrome extension, streamlining
           data management processes.
-        </p>
-        <p>
-          Designed and built a Chrome extension for LinkedIn to extract contacts
-          and perform data cleaning based on criteria like occupation level,
-          company, and job title, providing a targeted approach for data
-          collection.
         </p>
       </div>
     </div>
