--- a/apps/personal-portfolio/case-studies/hellotax.mdx
+++ b/apps/personal-portfolio/case-studies/hellotax.mdx
@@ -87,7 +87,7 @@ created: 1692842369687
           Bootstrapped and delivered an MVP within a few weeks, featuring a component library that emphasized accessibility.
         </p>
         <p>
-          Devised a strategy to move significant data processing and manipulation to the frontend, thereby reducing round-trip time (RTT) and enhancing the system's responsiveness.
+          Devised a strategy to move significant data processing and manipulation to the frontend, thereby reducing round-trip time and enhancing the system's responsiveness.
         </p>
         <p>
           Established robust assertion mechanisms through the development of optimized utility libraries, which included strong type-checks and validation techniques to ensure data integrity.
