:truck: :globe_with_meridians: :bento: moving content to i18n lib and fixing assets

--- a/apps/personal-portfolio/case-studies/flurrish.mdx
+++ b/apps/personal-portfolio/case-studies/flurrish.mdx
@@ -12,7 +12,7 @@ created: 1692842369687
   <div data-aos="zoom-in">
     <div class="d-flex project-infos-wrap shadow-box mb-24">
       <img src="/assets/bg1.png" alt="BG" class="bg-img" />
-      <img src="/assets/icons/icon2.png" alt="Icon" />
+      <img src="/assets/icons/icon2-2.png" alt="Icon" />
       <div class="project-details-info flex-1">
         <h3>Flurrish</h3>
         <p>
@@ -68,7 +68,7 @@ created: 1692842369687
     <div class="project-about-2 d-flex shadow-box mb-24">
       <img src="/assets/bg1.png" alt="BG" class="bg-img" />
       <div class="left-details">
-        <img src="/assets/icons/icon3.png" alt="Icon" />
+        <img src="/assets/icons/icon3-2.png" alt="Icon" />
         <ul>
           <li>
             <p>Year</p>
