--- a/libs/i18n/src/lib/english/contact.json
+++ b/libs/i18n/src/lib/english/contact.json
@@ -35,5 +35,12 @@
         "icon": "iconoir-linkedin"
       }
     ]
+  },
+  "form": {
+    "heading": "Let’s <span>chat.</span>",
+    "onCompletion": "Message has been dispatched!",
+    "button": {
+      "text": "Dispatch Message"
+    }
   }
 }
