--- a/apps/personal-portfolio/case-studies/superlink.mdx
+++ b/apps/personal-portfolio/case-studies/superlink.mdx
@@ -1,18 +1,18 @@
 ---
 title: Superlink Case Study
 uid: superlink
-thumbnail: /assets/case-studies/superlink-logo.png
+thumbnail: /assets/case-studies/superlink-logo-lg.png
 category: Web Development
 created: 1692842369687
 ---
 
-<PortfolioHeader media="/assets/case-studies/superlink-logo.svg" />
+<PortfolioHeader media="/assets/case-studies/superlink-logo-lg.png" />
 
 <div className="container">
   <div data-aos="zoom-in">
     <div class="d-flex project-infos-wrap shadow-box mb-24">
       <img src="/assets/bg1.png" alt="BG" class="bg-img" />
-      <img src="/assets/icons/icon2.png" alt="Icon" />
+      <img src="/assets/icons/icon2-2.png" alt="Icon" />
       <div class="project-details-info flex-1">
         <h3>SuperLink</h3>
         <p>
@@ -57,7 +57,7 @@ created: 1692842369687
     <div class="project-about-2 d-flex shadow-box mb-24">
       <img src="/assets/bg1.png" alt="BG" class="bg-img" />
       <div class="left-details">
-        <img src="/assets/icons/icon3.png" alt="Icon" />
+        <img src="/assets/icons/icon3-2.png" alt="Icon" />
         <ul>
           <li>
             <p>Year</p>
