:recycle: clearer link naming

--- a/apps/personal-portfolio/posts/free-dev-website-template.mdx
+++ b/apps/personal-portfolio/posts/free-dev-website-template.mdx
@@ -13,7 +13,7 @@ A beautiful, minimal and user-friendly portfolio template for developers, which 
 
 Give it a star 🌟 on Github if you find it useful.
 
-> GitHub: [Repo Link](https://github.com/msanvarov/personal-portfolio)
+> GitHub: [Code Repository](https://github.com/msanvarov/personal-portfolio)
 
 ## Features
 
