--- a/libs/i18n/src/lib/english/landing.json
+++ b/libs/i18n/src/lib/english/landing.json
@@ -15,7 +15,7 @@
     }
   },
   "credentials": {
-    "heading": "Credentials",
+    "heading": "Qualifications",
     "caption": "A little on Sal",
     "media": "/assets/credentials.png",
     "button": {
