:recycle: reworking the experience and case studies

--- a/apps/personal-portfolio/case-studies/hellotax.mdx
+++ b/apps/personal-portfolio/case-studies/hellotax.mdx
@@ -1,5 +1,5 @@
 ---
-title: HelloTax Case Study
+title: Hellotax Case Study
 uid: hellotax
 thumbnail: /assets/case-studies/hellotax-logo.png
 category: Web Development
