--- a/libs/i18n/src/lib/english/credentials.json
+++ b/libs/i18n/src/lib/english/credentials.json
@@ -57,25 +57,25 @@
       },
       {
         "date": "01/2020 - 09/2020",
-        "title": "Full Stack Developer",
-        "company": "Flurrish",
-        "description": "Constructed a Progressive Web App (PWA) for Flurrish using a stack that included TypeScript, React, Gatsby, Contentful, and Amplify, streamlined content management and aided in marketing to reputable Canadian colleges and universities. A React Native app aimed at enhancing student engagement was swiftly prototyped using Expo, React Native, and AWS Amplify, featuring a GraphQL backend with DynamoDB for storage."
+        "title": "Full Stack Development Contractor",
+        "company": "Research Capital Corporation",
+        "description": "At Research Capital Corporation, key initiatives were led to enhance operational efficiency and data analytics. A sophisticated trade blotter system was developed for precise tracking of electricity trades, alongside the re-architecture of the ML model training pipeline using Python, significantly improving predictive accuracy and efficiency. The reworking of metrics collection using Prefect streamlined data accuracy and efficiency. The establishment of a Kubernetes environment with AWS EKS facilitated the deployment of diverse ML pipelines, ensuring scalability and robust operations. Furthermore, the automation of code deployment through a CI/CD pipeline with GitHub Actions, and the integration of Grafana for advanced data visualization and reporting, provided critical insights for decision-making. These contributions were pivotal in driving technological advancement and operational excellence at the company."
       },
       {
         "date": "2018 - 2020",
-        "title": "Full Stack Developer",
+        "title": "Full Stack Development Contractor",
         "company": "Hopin Technologies",
         "description": "Developed a client-facing mobile app using React Native and TypeScript to facilitate last-mile transportation logistics for company employees, saving hundreds of labour-hours previously spent on manual data collection. The backend, powered by GCP's Firebase and the Samsara ecosystem, was swiftly prototyped to enable scalable operations, while an upgraded landing page was crafted using React and Gatsby to enhance business appeal to potential clients."
       },
       {
         "date": "2017 - 2018",
-        "title": "Backend Developer",
+        "title": "Backend Development Contractor",
         "company": "Natura Market",
         "description": "Automated deployment processes for easier deployment to production, which also optimized AWS costs during high-traffic hours. Frontend files were fine-tuned for enhanced client experience, and a migration from Magento's query engine extension to Algolia was executed to enhance querying capabilities."
       },
       {
         "date": "2017 - 2018",
-        "title": "Full Stack Developer",
+        "title": "Full Stack Development Contractor",
         "company": "Royal Bank of Canada",
         "description": "Developed a range of efficiency tools, including a TypeScript CLI tool for log migration to Amazon S3, a NestJS web server for automating HP ALM tasks, and a React dashboard for managing Jenkins plugins, which reduced hours of manual labour and system downtimes. Facilitated efforts to enhance the user experience in the RBC online banking portal, and mortgage orchestration portal."
       }
