:speech_balloon: tweaking description

--- a/libs/i18n/src/lib/english/credentials.json
+++ b/libs/i18n/src/lib/english/credentials.json
@@ -77,7 +77,7 @@
         "date": "2017 - 2018",
         "title": "Full Stack Development Contractor",
         "company": "Royal Bank of Canada",
-        "description": "Developed a range of efficiency tools, including a TypeScript CLI tool for log migration to Amazon S3, a NestJS web server for automating HP ALM tasks, and a React dashboard for managing Jenkins plugins, which reduced hours of manual labour and system downtimes. Facilitated efforts to enhance the user experience in the RBC online banking portal, and mortgage orchestration portal."
+        "description": "Developed a range of efficiency tools, including a TypeScript CLI tool for log migration to Amazon S3, a Nest.js web server for automating HP ALM tasks, and a React dashboard for managing Jenkins plugins, which reduced hours of manual labour and system downtimes. Facilitated efforts to enhance the user experience in the RBC online banking portal, and mortgage orchestration portal."
       }
     ]
   },
