:recycle: meta tags for case studies and blog posts
:bug: fixing meta typo

:bug: more meta tag fixes

:recycle: fixing passing in children to next head

--- a/apps/personal-portfolio/case-studies/cleanlist.mdx
+++ b/apps/personal-portfolio/case-studies/cleanlist.mdx
@@ -1,5 +1,6 @@
 ---
-title: Cleanlist Case Study
+title: Cleanlist.ai Case Study
+description: Cleanlist.ai is a Saas company that provides a platform for cleaning leads and enriching contacts from Linkedin.
 uid: cleanlist
 thumbnail: /assets/case-studies/cleanlist-logo.png
 category: Web Development
