--- a/apps/personal-portfolio/case-studies/flurrish.mdx
+++ b/apps/personal-portfolio/case-studies/flurrish.mdx
@@ -1,5 +1,6 @@
 ---
 title: Flurrish Case Study
+description: Flurrish is a media app made for students on campus. Flurrish enables students to take part in authentic and personalized experiences based on their core interests.
 uid: flurrish
 thumbnail: /assets/case-studies/flurrish-logo.png
 category: Web Development
