--- a/apps/personal-portfolio/case-studies/hellotax.mdx
+++ b/apps/personal-portfolio/case-studies/hellotax.mdx
@@ -1,5 +1,6 @@
 ---
 title: Hellotax Case Study
+description: HelloTax is a VAT compliance automation software tailored towards multi-channel traders across Europe.
 uid: hellotax
 thumbnail: /assets/case-studies/hellotax-logo.png
 category: Web Development
