--- a/apps/personal-portfolio/case-studies/hopin-technologies.mdx
+++ b/apps/personal-portfolio/case-studies/hopin-technologies.mdx
@@ -1,5 +1,6 @@
 ---
 title: Hopin Technologies Case Study
+description: Hopin is one of the leading platforms that offers tailored transportation for daily commutes. Through logistics software, Hopin uses existing charter and rideshare fleets.
 uid: hopin-technologies
 thumbnail: /assets/case-studies/hopin-logo.jpeg
 category: Web Development
