--- a/apps/personal-portfolio/case-studies/natura-market.mdx
+++ b/apps/personal-portfolio/case-studies/natura-market.mdx
@@ -1,5 +1,6 @@
 ---
 title: Natura Market Case Study
+description: Natura Market is a Canadian-based eCommerce business specializing in the wholesale distribution of perishable goods.
 uid: natura-market
 thumbnail: /assets/case-studies/natura-market-logo.avif
 category: Web Development
