:speech_balloon: co-op experience

--- a/libs/i18n/src/lib/english/credentials.json
+++ b/libs/i18n/src/lib/english/credentials.json
@@ -74,10 +74,22 @@
         "description": "Automated deployment processes for easier deployment to production, which also optimized AWS costs during high-traffic hours. Frontend files were fine-tuned for enhanced client experience, and a migration from Magento's query engine extension to Algolia was executed to enhance querying capabilities."
       },
       {
-        "date": "2017 - 2018",
-        "title": "Full Stack Development Contractor",
-        "company": "Royal Bank of Canada",
-        "description": "Developed a range of efficiency tools, including a TypeScript CLI tool for log migration to Amazon S3, a Nest.js web server for automating HP ALM tasks, and a React dashboard for managing Jenkins plugins, which reduced hours of manual labour and system downtimes. Facilitated efforts to enhance the user experience in the RBC online banking portal, and mortgage orchestration portal."
+        "date": "04/2016 - 08/2016",
+        "title": "Software Developer Co-op",
+        "company": "IBM",
+        "description": "Developed RPA workflows using .NET technologies, focusing on business process automation for enhanced efficiency. Furthermore, creating applications with C# and .NET Core, and incorporating RPA bots with client systems via Web API 2.0. Enhanced user interfaces with WPF, improving RPA management tools through intuitive design and Redis Caching for performance."
+      },
+      {
+        "date": "01/2016 - 04/2016",
+        "title": "Software Developer Co-op",
+        "company": "Intuit",
+        "description": "Contributed to enhance TurboTax.com, focusing on performance and high throughput. Contributed to refactoring code in languages C#, and Python to help architect resilient and efficient systems, ensuring an uninterrupted and high-quality user experience."
+      },
+      {
+        "date": "04/2015 - 08/2015",
+        "title": "Software Developer Co-op",
+        "company": "Amazon",
+        "description": "Developed web applications to automate and streamline Amazon's sales processes, using JavaScript, HTML, and CSS for intuitive, responsive UIs."
       }
     ]
   },
