refactor: tweaking link

--- a/libs/i18n/src/lib/english/landing.json
+++ b/libs/i18n/src/lib/english/landing.json
@@ -81,7 +81,7 @@
     },
     "profiles": [
       {
-        "link": "https://github.com/msanvarov/personal-portfolio",
+        "link": "https://github.com/msanvarov",
         "icon": "iconoir-github"
       },
       {
