chore: tweaking experience

--- a/libs/i18n/src/lib/english/credentials.json
+++ b/libs/i18n/src/lib/english/credentials.json
@@ -44,8 +44,8 @@
         "description": "Focusing on providing a better experience for Oproma clients by delivering high-quality, robust production code for Prividox; an Oproma file management system."
       },
       {
-        "date": "2023 - Present",
-        "title": "Chief Technology Officer",
+        "date": "2022 - Present",
+        "title": "Board Member",
         "company": "Cleanlist.ai",
         "description": "Leading the development efforts in providing an AI powered lead generation platform for Cleanlist.ai clients."
       },
