chore: tweaking email

--- a/libs/i18n/src/lib/english/contact.json
+++ b/libs/i18n/src/lib/english/contact.json
@@ -4,7 +4,7 @@
     "mail": {
       "heading": "MAIL",
       "icon": "iconoir-mail",
-      "links": ["sal@dezzign.studio", "msalanvarov@gmail.com"]
+      "links": ["hey@by-sal.dev", "msalanvarov@gmail.com"]
     },
     "phone": {
       "heading": "CONTACT",
